<resources>
    <string name="app_name">Demo</string>
    <string name="title_activity_views">Views</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="android_topics">ANDROID TOPICS</string>
    <string name="ui">UI</string>
    <string name="ui_topics">UI topics</string>
    <string name="ui_topics_view">VIEWS</string>
    <string name="ui_topics_layout">LAYOUTS</string>
    <string name="ui_topics_drawable">DRAWABLE</string>
    <string name="layout_linear">LINEAR LAYOUT</string>
    <string name="layout_relative">RELATIVE LAYOUT</string>
    <string name="layout_constraint">CONSTRAINT LAYOUT</string>
    <string name="layout_frame">FRAME LAYOUT</string>
    <string name="layout_custom">CUSTOM LAYOUT</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Sign in with</string>
    <string name="views_title">Views</string>
    <string name="textview">TEXTVIEW</string>
    <string name="edittext">EDITTEXT</string>
    <string name="button">BUTTON</string>
    <string name="checkbox">CHECKBOX</string>
    <string name="radiobutton">RADIOBUTTON</string>
    <string name="togglebutton">TOGGLEBUTTON</string>
    <string name="SWITCH">SWITCH</string>
    <string name="imageview">IMAGEVIEW</string>
    <string name="textview_placeholder">This is a textview</string>
    <string name="count">count</string>
    <string name="click">click</string>
    <string name="hint_string">Enter String</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_address">Enter address</string>
    <string name="hint_passwd_max_eight">Enter password with max 8 chars</string>
    <string name="default_passwd_count">0/8</string>
    <string name="cricket">Cricket</string>
    <string name="basketball">Basketball</string>
    <string name="Chess">Chess</string>
    <string name="Volleyball">Volleyball</string>
    <string name="gender_label_text">Choose Gender</string>
    <string name="gender_male">Male</string>
    <string name="gneder_female">Female</string>
    <string name="label_toggle">Toggle Buttom</string>
    <string name="label_switch">On/Off</string>
    <string name="custom_label_email">Email</string>
    <string name="custom_hint_email">Enter your Email address</string>
    <string name="dmen_login_signin">SIGN IN</string>
    <string name="dmen_signin_message">Please enter following details to continue with app.</string>
    <string name="keep_me_signed_in">keep me signed in</string>
    <string name="don_t_have_account_signup">Don\'t have account?Signup</string>
    <string name="or">OR</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="dimen">DIMEN</string>
    <string name="login_with_dimen">LOGIN WITH DIMEN</string>
    <string name="multi_screen">MULTI SCREEN</string>
    <string name="vector">VECTOR</string>
    <string name="android_logo">Android logo</string>
    <string name="shapes">Shapes</string>
    <string name="selector">SELECTOR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycler_view">RECYCLER VIEW</string>
    <string name="view_pager">VIEW PAGER</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_c">Fragment C</string>
    <string name="toolbar">TOOLBAR</string>
    <string name="hello">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Justo nec ultrices dui sapien eget mi proin sed libero. Nec dui nunc mattis enim ut tellus elementum. Sed nisi lacus sed viverra tellus. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin. Lacus vel facilisis volutpat est velit egestas dui id. Gravida in fermentum et sollicitudin ac orci phasellus egestas. Enim lobortis scelerisque fermentum dui faucibus. Mollis aliquam ut porttitor leo a diam. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus iaculis. Ac turpis egestas integer eget aliquet.

Adipiscing elit pellentesque habitant morbi tristique. Cursus sit amet dictum sit. Velit ut tortor pretium viverra suspendisse potenti nullam ac tortor. Vitae elementum curabitur vitae nunc sed velit dignissim sodales. Vitae nunc sed velit dignissim sodales ut eu sem. Placerat vestibulum lectus mauris ultrices eros in cursus. Nulla facilisi morbi tempus iaculis urna id volutpat lacus laoreet. Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Vitae nunc sed velit dignissim sodales. In nulla posuere sollicitudin aliquam ultrices sagittis orci a. Tortor dignissim convallis aenean et. Sit amet mattis vulputate enim nulla aliquet porttitor. In fermentum et sollicitudin ac orci phasellus egestas tellus. Eu consequat ac felis donec et odio. Semper auctor neque vitae tempus quam pellentesque nec. Convallis posuere morbi leo urna molestie at elementum eu. Laoreet id donec ultrices tincidunt.</string>
    <string name="floating_action">Floating action</string>
    <string name="view_contact">View Contact</string>
    <string name="media">Media</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="block">Block</string>
    <string name="clear">Clear</string>
    <string name="menu">MENU</string>
    <string name="navigation">NAVIGATION</string>
    <string name="nav_topics_intent">INTENT</string>
    <string name="nav_topics_Intent_filters">INTENT FILTERS</string>
    <string name="next">NEXT</string>
    <string name="enter_address">Enter address</string>
    <string name="back">BACK</string>
    <string name="share">Enter your shareable text</string>
    <string name="share_text">Share Text</string>
    <string name="share_image">Share Image</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="task">Task</string>
    <string name="nav_topics_fragments">FRAGMENTS</string>
    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_settings">Settings Fragment</string>
    <string name="fragment_tasks">Tasks Fragment</string>
    <string name="click_me">Click me!</string>
    <string name="alert_dialog">ALERT DIALOG</string>
    <string name="bottom_sheet">BOTTOM SHEET</string>
    <string name="cancel">cancel</string>
    <string name="Done">Done</string>
    <string name="nav_topics_dialogs">DIALOGS</string>
    <string name="logout">LOGOUT</string>
    <string name="nav_topics_page_navigation">VIEWPAGER NAVIGATION</string>
    <string name="add_image">Add Image</string>
    <string name="add_address">Add Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="prefix_image">image</string>
    <string name="nav_topics_permissions">PERMISSIONS</string>
    <string name="location_message_settings">For this feature to work it needs location permission, enable location permission from settings to access this feature.</string>
    <string name="camera_message_settings">For this feature to work it needs camera permission, enable camera permission from settings to access this feature.</string>
    <string name="gallery_message_settings">For this feature to work it needs gallery permission, enable gallery permission from settings to access this feature.</string>
    <string name="contacts_message_settings">For this feature to work it needs read contacts permission, enable read contacts permission from settings to access this feature.</string>
    <string name="storage_message_settings">For this feature to work it needs read storage permission, enable read storage permission from settings to access this feature.</string>
    <string name="attention">Attention!</string>
    <string name="ok">Okay.</string>
    <string name="enable_location">Enable GPS in high accuracy mode.</string>
    <string name="notify_simple">Simple Notification</string>
    <string name="notify_action">Action Notification</string>
    <string name="channel_name">testing</string>
    <string name="channel_description">testing channel</string>
    <string name="channel_test_id">111</string>
    <string name="id">id</string>
    <string name="nav_topics_notifications">NOTIFICATIONS</string>
    <string name="select_photo">Select photo from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="nav_topics_content_provider">CONTENT PROVIDER</string>
    <string name="get_content">Get Content</string>
    <string name="nav_topics_contact_provider">CONTACT PROVIDER</string>
    <string name="nav_topics_broadcast_receiver">BROADCAST RECEIVER</string>
    <string name="broadcast_hint">Enter your Broadcast text</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="intent_service">Intent service</string>
    <string name="background_service">Background Service</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="music_player">Music</string>
    <string name="nav_topics_service">services</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="default_timer">0:00:00</string>
    <string name="pause">pause</string>
    <string name="handler">handler</string>
    <string name="seconds">seconds</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="secs">secs</string>
    <string name="default_watch_format">%d:%02d:%02d</string>
    <string name="message">message</string>
    <string name="read_storage_granted">read storage permission granted</string>
    <string name="play">play</string>
    <string name="stopMedia">MEDIA.STOP</string>
    <string name="pauseMedia">MEDIA.PAUSE</string>
    <string name="playMedia">MEDIA.PLAY</string>
    <string name="compress">compress</string>
    <string name="Saving_data_Multimedia"><![CDATA[Saving data & Multimedia]]></string>
    <string name="saving_data_multimedia_multi_threading">Multi Threading</string>
    <string name="multi_threading">Multi Threading</string>
    <string name="enter_first_number">Enter your number</string>
    <string name="enter_first_two">Enter your number</string>
    <string name="sum">sum</string>
    <string name="saving_data_multimedia_factorial">factorial multiple Threads</string>
    <string name="saving_data_multimedia_async">async task</string>
    <string name="saving_data_multimedia_coroutine">coroutine</string>
    <string name="saving_data_saving_file">Saving File</string>
    <string name="save">Save</string>
    <string name="save_amp_share"><![CDATA[save & share]]></string>

</resources>