<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_phone"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_video_call"
        android:icon="@drawable/ic_video_call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_view_contact"
        android:title="@string/view_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_media"
        android:title="@string/media"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_more"
        android:title="@string/more"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/subitem_block"
                android:title="@string/block" />
            <item
                android:id="@+id/subitem_clear"
                android:title="@string/clear" />
        </menu>

    </item>

</menu>