<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.views.Views">
  <TextView
      android:layout_margin="10dp"
      android:text="@string/views_title"
      android:textColor="@color/black"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  <LinearLayout
      android:layout_width="wrap_content"
      android:orientation="vertical"
      android:minWidth="185dp"
      android:layout_height="wrap_content">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_textview"
        android:layout_width="match_parent"
        android:text="@string/textview"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_checkbox"
        android:layout_width="match_parent"
        android:text="@string/checkbox"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_radiobutton"
        android:layout_width="match_parent"
        android:text="@string/radiobutton"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SWITCH" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_imageview"
        android:layout_width="match_parent"
        android:text="@string/imageview"
        android:layout_height="wrap_content"/>
  </LinearLayout>

  </LinearLayout>