<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".saving_multimedia.SavingMultimediaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/Saving_data_Multimedia"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saving_data_multimedia_multithreading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/saving_data_multimedia_multi_threading" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saving_data_multimedia_multithreading_factorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/saving_data_multimedia_factorial" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saving_data_multimedia_multithreading_async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/saving_data_multimedia_async" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saving_data_multimedia_multithreading_coroutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/saving_data_multimedia_coroutine" />

</LinearLayout>