<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".navigation.NavigationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/navigation"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_topics_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nav_topics_intent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_topics_Intent_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nav_topics_Intent_filters" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_topics_fragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nav_topics_fragments" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_topics_dialogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nav_topics_dialogs" />
</LinearLayout>