<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.FilterMainActivity">

    <EditText
        android:id="@+id/filter_main_et"
        android:hint="@string/share"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/filter_main_btn_txt"
        android:text="@string/share_text"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/filter_main_btn_img"
        android:text="@string/share_image"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>