<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.views.RadioButtonActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/gender_label_text"/>
<RadioGroup
    android:id="@+id/gender_radio_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_male"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gneder_female"/>
</RadioGroup>
</LinearLayout>