<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.views.Textview">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:padding="2dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/design_default_color_secondary"
        android:text="@string/textview_placeholder"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColor="@color/black"
        android:text="@string/count"/>
    <com.google.android.material.button.MaterialButton
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/click"/>
</LinearLayout>