<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.dimen.DimenActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dimen"
        android:textColor="@color/black" />
    <LinearLayout
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_163sdp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dimen_menu_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_dimen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dimen_menu_multi_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_screen" />
    </LinearLayout>
</LinearLayout>